/*
The file is generated by a scaffold script
@author: Arkan M. Gerges<arkan.m.gerges@gmail.com>
*/


syntax = "proto3";
package cafm.project.subcontractor;

message Subcontractor {
  string id = 1;
  string companyName = 2;
  string websiteUrl = 3;
  string contactPerson = 4;
  string email = 5;
  string phoneNumber = 6;
  string addressOne = 7;
  string addressTwo = 8;
  string subcontractorCategoryId = 9;
  string description = 10;
  int32 cityId = 11;
  int32 countryId = 12;
  string stateId = 13;
  string postalCode = 14;
}
